timeline line alignment is fixed.

--- a/src/app/experience-page/experience-page.component.scss
+++ b/src/app/experience-page/experience-page.component.scss
@@ -19,11 +19,10 @@
   }
   .timeline-line {
     position: absolute;
+    top: 230px;
     width: 4px;
     background-color: #66b1f1;
-    height: 50%;
-    left: 50%;
-    transform: translateX(-50%);
+    height: 25%;
   }
 
   .timeline-cards {
